# offline-notification-system

./: main.rb  print_pos.py
app/: pubspec.yaml
app/lib/: main.dart  router.dart
app/lib/providers/: active_agent_id_provider.dart  agent_provider.dart  chat_provider.dart  connection_provider.dart  cron_provider.dart  subscription_provider.dart
app/lib/screens/: agent_editor_screen.dart  chat_screen.dart  connect_screen.dart  cron_editor_screen.dart  crons_screen.dart  home_screen.dart  integrations_screen.dart  settings_screen.dart  subscription_screen.dart
app/lib/services/: api_service.dart  socket_service.dart
app/lib/theme/: app_theme.dart  colors.dart  glass_theme.dart  typography.dart
app/lib/widgets/: chat_bubble.dart  chat_input.dart  glass_button.dart  glass_container.dart  main_shell.dart  provider_badge.dart
backend/: .env.example  Cargo.toml
backend/migrations/: 001_schema.sql
backend/src/: config.rs  main.rs
backend/src/agents/: mod.rs  orchestrator.rs  prompt_builder.rs  types.rs
backend/src/agents/providers/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs
backend/src/crons/: scheduler.rs
backend/src/db/: mod.rs
backend/src/flows/: executor.rs  mod.rs  types.rs
backend/src/integrations/: calendar.rs  gmail.rs  mod.rs  rss.rs  slack.rs  webhook.rs
backend/src/routes/: agents.rs  auth.rs  conversations.rs  crons.rs  flows.rs  integrations.rs  keys.rs  mod.rs  profiles.rs  skills.rs
backend/src/socket/: mod.rs
backend/src/utils/: auth.rs  crypto.rs  errors.rs  mod.rs
