[package]
name = "hermes-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hermes-server"
path = "src/main.rs"

[[bin]]
name = "hermes-setup"
path = "src/bin/setup.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
socketioxide = { version = "0.14", features = ["state"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.11", features = ["signal"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "limit", "trace"] }
quick-xml = { version = "0.36", features = ["serialize"] }
qrcode = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"
bytes = "1"
http = "1"
async-trait = "0.1"
once_cell = "1"
eventsource-stream = "0.2"
